# dmc

./: .gitignore  Makefile.am  Makefile.in  README.md  config.h  config.hin  configure  configure.ac
dmr/: Cargo.toml
dmr/src/: lib.h  lib.rs
src/: .gitignore  CMakeLists.txt  Makefile.am  d_loop.c
src/doom/: CMakeLists.txt  Makefile.am  d_main.c
src/setup/: CMakeLists.txt  Makefile.am  Setup.desktop.in
